fixed wrap on small resolutions

--- a/src/components/main/ContactFormScreen/styles.module.scss
+++ b/src/components/main/ContactFormScreen/styles.module.scss
@@ -38,6 +38,7 @@
   display: grid;
   grid-auto-rows: auto;
   row-gap: 12px;
+  grid-row-gap: 12px;
 }
 
 .terms {
